--- a/i18n/zh-tw.yaml
+++ b/i18n/zh-tw.yaml
@@ -42,7 +42,7 @@ notFound:
 widget:
     archives:
         title:
-            other: 紀錄
+            other: 文章
 
         more:
             other: 更多
